@@ -1,2 +1,2 @@
-bitcoin: 0xf2CF069aB7dAd9C79c10BBA6cA2DE3DE5Ab7887B
-ethereum: 0xAdC883296A5634108D3570Eb9742EaBE2908EdF8
+bitcoin: 0xbF333cCf6a3dE275E1fD1e236b2aE468EE1137A7
+ethereum: 0xCcEF4F75f8cf91956D63dCbdAA3E3a81763b915A
