@@ -1,2 +1,2 @@
-bitcoin: c0bff31d3179d7ac473de1fd2de0eab72104ec2b20fac33a16fd84088931dde6
-ethereum: aa196095bb6e74f637c2a793ac9694045792f8be3f125704fbf9f6abc5ef208f
+bitcoin: 70d99dbb9a93097ee2a860276df43ac4a0742298a9dde79c9bb70266ddb491d2
+ethereum: 06870d96f046ed9e0add0863dbca1831a029017e217f592ae32411f2ea6dfccf
